--- a/mystyle.css
+++ b/mystyle.css
@@ -5,7 +5,7 @@
   
   .navbar a {
     float: left;
-    font-size: 16px;
+    font-size: 100%;
     color: white;
     text-align: center;
     padding: 14px 16px;
@@ -77,7 +77,14 @@ div-center {
     width: 70%;
     background-image: linear-gradient(#e2dbdb,#9bb99f);
 }
-
+div-center2 {
+  list-style-type: none;
+  display: block;
+  padding: 10%;
+  height: 2%;
+  width: 70%;
+  background-image: linear-gradient(#9bb99f,#e2dbdb);
+}
 body{
   background-image: linear-gradient(#000000,#474747);
   font-family: Arial, Helvetica, sans-serif;
@@ -96,7 +103,7 @@ div-clock {
 div-end{
    display: block;
    left: 0;
-   bottom: 0;
+   bottom: 0%;
    padding: 0.2%;
    width: 100%;
 
